# f-droid-unarchived-app-got-archived-repo-checker

./: .gitignore  README.md  pyproject.toml
src/archived_repo_checker/: __init__.py  __main__.py  fdroid.py  handlers.py  methods.py  utils.py
testmetadata/: README.md  de.szalkowski.activitylauncher.rustore_fork.yml
