[project]
name = "f-droid-unarchived-app-got-archived-repo-checker"
version = "0.1.0"
description = "repo got {archiv,delet}ed? archive it!"
authors = [
    {name = "yzqzss", email = "yzqzss@yandex.com"},
]
dependencies = [
    "httpx[http2]>=0.27.2",
    "PyYAML>=6.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
archived_repo_checker = "archived_repo_checker:main"
